2018-05-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #12683]
	* sysdeps/unix/sysv/linux/sparc/sparc32/sigcontextinfo.h
	(ucontext_get_pc): New function.
	* sysdeps/unix/sysv/linux/sparc/sparc64/sigcontextinfo.h
	(ucontext_get_pc): Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/syscall_cancel.S: New file.
	* sysdeps/unix/sysv/linux/sparc/sparc64/syscall_cancel.S: Likwise.
	* sysdeps/unix/sysv/linux/sparc/sparc64/pause.c: New file.

	[BZ #12683]
	* sysdeps/unix/sysv/linux/microblaze/syscall_cancel.S: New file.
	* sysdeps/unix/sysv/linux/microblaze/sigcontextinfo.h
	(ucontext_get_pc): New function.

	[BZ #12683]
	* sysdeps/unix/sysv/linux/m68k/sigcontextinfo.h (ucontext_get_pc):
	New function.

	[BZ #12683]
	* sysdeps/unix/sysv/linux/alpha/sigcontextinfo.h (ucontext_get_pc):
	New function.

	[BZ #12683]
	* sysdeps/unix/sysv/linux/ia64/sigcontextinfo.h (ucontext_get_pc,
	ucontext_get_mask): New functions.
	* sysdeps/unix/sysv/linux/ia64/syscall_cancel.S: New file.

	[BZ #12683]
	* sysdeps/unix/sysv/linux/s390/sigcontextinfo.h (ucontext_get_pc):
	New function.

	[BZ #12683]
	* sysdeps/unix/sysv/linux/arm/Makefile (CFLAGS-syscall_cancel.c): New
	rule.
	* sysdeps/unix/sysv/linux/arm/sigcontextinfo.h (ucontext_get_pc):
	New function.

	[BZ #12683]
	* sysdeps/unix/sysv/linux/aarch64/sigcontextinfo.h (ucontext_get_pc):
	New function.

	[BZ #12683]
	* sysdeps/unix/sysv/linux/powerpc/syscall_cancel.S: New file.
	* sysdeps/unix/sysv/linux/powerpc/sysdep-cancel.h
	(__pthread_get_pc): New function.

	[BZ #12683]
	* sysdeps/unix/sysv/linux/i386/Makefile
	[$(subdir) = elf] (sysdep-rtld_routines): Add libc-do-syscall object.
	* sysdeps/unix/sysv/linux/i386/syscall_cancel.S: New file.
	* sysdeps/unix/sysv/linux/i386/sigcontextinfo.h (ucontext_get_pc):
	New function.

	[BZ #12683]
	* sysdeps/unix/sysv/linux/x86_64/x32/sysdep.h (__syscall_arg_t):
	Define type for x32.
	(__SSC): Add platform specific macro.