@@ -1,6 +1,10 @@
 2018-05-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
 	[BZ #12683]
+	* sysdeps/unix/sysv/linux/nios2/sigcontextinfo.h (ucontext_get_pc):
+	New function.
+
+	[BZ #12683]
 	* sysdeps/unix/sysv/linux/sparc/sparc32/sigcontextinfo.h
 	(ucontext_get_pc): New function.
 	* sysdeps/unix/sysv/linux/sparc/sparc64/sigcontextinfo.h
